--- a/MakeFile
+++ b/MakeFile
@@ -1,8 +1,4 @@
-.PHONY: protos
-
-protos: force
+protos:
 	protoc --go_out=. --go_opt=paths=source_relative \
     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
     protos/currency.proto 
-
-force: ;
